--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.lounah.gallery"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -35,7 +35,7 @@ ext {
     constraintLayoutVersion = '1.0.2'
     espressoVersion = '3.0.1'
     jUnitVersion = '4.12'
-    picassoVersion = '2.5.2'
+    glideVersion = '4.6.1'
     leakCanaryVersion = '1.5.4'
     timberVersion = '4.6.1'
 }
@@ -68,8 +68,9 @@ dependencies {
     implementation "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:${rxBindingVersion}"
 
 
-    // Picasso
-    implementation "com.squareup.picasso:picasso:${picassoVersion}"
+    // Glide
+    implementation "com.github.bumptech.glide:glide:${glideVersion}"
+    annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
 
     // UI
     implementation 'de.hdodenhof:circleimageview:2.2.0'
