--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
+
+
         buildTypes.each {
-            it.buildConfigField('String', 'TOKEN', 'AQAAAAAhnJpWAADLW-6bwpNkz0Q2gz3MilFSIsA')
+            it.buildConfigField("String", "AUTH_TOKEN", "${token}")
         }
     }
 
@@ -33,16 +35,17 @@ ext {
     retrofitVersion = '2.4.0'
     rxJavaVersion = '2.1.1'
     rxJavaAndroidVersion = '2.0.1'
-    rxBindingVersion = '2.0.0'
+    gsonVersion = '2.8.2'
     archLivecycleVersion = '1.1.1'
     archPersistenceVersion = '1.0.0'
     butterKnifeVersion = '8.8.1'
-    constraintLayoutVersion = '1.0.2'
+    constraintLayoutVersion = '1.1.0'
     espressoVersion = '3.0.1'
     jUnitVersion = '4.12'
     glideVersion = '4.6.1'
     leakCanaryVersion = '1.5.4'
     timberVersion = '4.6.1'
+    mockitoVersion = '2.6.3'
 }
 
 dependencies {
@@ -60,6 +63,8 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:${retrofitVersion}"
     implementation "com.squareup.retrofit2:converter-gson:${retrofitVersion}"
 
+    // Gson
+    implementation "com.google.code.gson:gson:${gsonVersion}"
 
     // Dagger 2
     implementation "com.google.dagger:dagger:${daggerVersion}"
@@ -72,12 +77,6 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:${rxJavaVersion}"
     implementation "io.reactivex.rxjava2:rxandroid:${rxJavaAndroidVersion}"
 
-    // RxBinding
-    implementation "com.jakewharton.rxbinding2:rxbinding:${rxBindingVersion}"
-    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:${rxBindingVersion}"
-    implementation "com.jakewharton.rxbinding2:rxbinding-recyclerview-v7:${rxBindingVersion}"
-
-
     // Glide
     implementation "com.github.bumptech.glide:glide:${glideVersion}"
     annotationProcessor "com.github.bumptech.glide:compiler:${glideVersion}"
@@ -86,6 +85,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     implementation 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
 
     // LeakCanary
     debugCompile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
@@ -96,6 +96,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:${archPersistenceVersion}"
     implementation "android.arch.persistence.room:rxjava2:${archPersistenceVersion}"
 
+
     // LiveData
     implementation "android.arch.lifecycle:extensions:${archLivecycleVersion}"
     implementation "android.arch.lifecycle:reactivestreams:${archLivecycleVersion}"
@@ -103,12 +104,20 @@ dependencies {
 
     // Lifecycle
     implementation "android.arch.lifecycle:common-java8:${archLivecycleVersion}"
+    androidTestImplementation "android.arch.core:core-testing:${archLivecycleVersion}"
 
 
     // Logging
     implementation "com.jakewharton.timber:timber:${timberVersion}"
 
+
     testImplementation "junit:junit:${jUnitVersion}"
+
+    testImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
+
+    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
+    androidTestImplementation "org.mockito:mockito-android:${mockitoVersion}"
+
     androidTestImplementation "com.android.support.test.espresso:espresso-core:${espressoVersion}"
 }
